--- a/connectionmonitoringtool/web/css/main.css
+++ b/connectionmonitoringtool/web/css/main.css
@@ -59,3 +59,10 @@ table tr {
 form td {
     font-size: smaller;
 } 
+
+.red-color-table td{
+    font-weight: bold;
+    color: red;
+    font-size: 14px;
+    text-align: center; 
+} 
