--- a/connectionmonitoringtool/web/css/main.css
+++ b/connectionmonitoringtool/web/css/main.css
@@ -60,9 +60,21 @@ form td {
     font-size: smaller;
 } 
 
-.red-color-table td{
+.red-color-table {
     font-weight: bold;
     color: red;
     font-size: 14px;
+    text-align: center; 
+} 
+
+.red-color-table-td td {
+    font-weight: bold;
+    color: red;
+    font-size: 14px;
+    text-align: center; 
+} 
+
+table td {
+
     text-align: center; 
 } 
